--- a/projetoceuazul-main/html/noticias.html
+++ b/projetoceuazul-main/html/noticias.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="#"><img src="../midia/img/ceuazullogo.webp" alt="logo" id="logo"></img></a>
+            <ul id="nav-list">
+                <li><a href="#">Principal</a></li>
+                <li><a href="#">Notícias</a></li>
+                <li><a href="#">Grandes Figuras</a></li>
+                <li><a href="#">Feitos da Prefeitura</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
             <article>
                 <img class="imagnoti" src="#" alt="alcolatra">
@@ -15,6 +26,7 @@
                         <p></p>
 
             </article>
+
             <article>
                 <img class="imagnoti" src="#" alt="shaves">
                 <h1 > "Gangue do shaves" <br> e pega roubando uma
@@ -22,6 +34,7 @@
                       <h2></h2>
                         <p></p>
             </article>
+
             <article>
                 <img class="imagnoti" src="#" alt="sucessores">
                 <h1> organização criminosa aterroriza céu azul</h1>
