--- a/projetoceuazul-main/html/index.html
+++ b/projetoceuazul-main/html/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilo.css">
     <title>Prefeitura Municipal de Céu Azul</title>
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
+    <header>
+        <h1>Prefeitura Municipal de Céu Azul</h1>
+        <nav>
+            <ul>
+                Principal
+                Notícias
+                
+            </ul>
+        </nav>
+    </header>
     <main>
-        <h1>oi</h1>
+
     </main>
 </body>
 </html>
