--- a/projetoceuazul-main/html/noticias.html
+++ b/projetoceuazul-main/html/noticias.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principais notícias</title>
+    <title>Notícias - Prefeitura de Céu Azul</title>
     <link rel="stylesheet" href="../css/estilo.css">
+    <script src="../js/funcionalidades.js"></script>
 </head>
 <body>
     <header>
         <nav>
-            <a href="#"><img src="../midia/img/ceuazullogo.webp" alt="logo" id="logo"></img></a>
+            <img src="../midia/img/ceuazullogo.webp" alt="logo da Prefeitura de Céu Azul" id="logo">
             <ul id="nav-list">
-                <li><a href="#">Principal</a></li>
-                <li><a href="#">Notícias</a></li>
-                <li><a href="#">Grandes Figuras</a></li>
-                <li><a href="#">Feitos da Prefeitura</a></li>
+                <li><a href="#" id="nav1">Principal</a></li>
+                <li><a href="#" id="nav2">Notícias</a></li>
+                <li><a href="#" id="nav3">Grandes Figuras</a></li>
+                <li><a href="#" id="nav4">Feitos da Prefeitura</a></li>
             </ul>
         </nav>
     </header>
