--- a/projetoceuazul-main/html/index.html
+++ b/projetoceuazul-main/html/index.html
@@ -8,17 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>Prefeitura Municipal de Céu Azul</h1>
         <nav>
-            <ul>
-                Principal
-                Notícias
-                
+            <img src="../midia/img/ceuazullogo.webp" alt="logo da Prefeitura de Céu Azul" id="logo">
+            <div id="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul id="nav-list">
+                <li><a href="#" id="nav1">Principal</a></li>
+                <li><a href="#" id="nav2">Notícias</a></li>
+                <li><a href="#" id="nav3">Grandes Figuras</a></li>
+                <li><a href="#" id="nav4">Feitos da Prefeitura</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <section class="quadradoazul"></section>
     </main>
 </body>
 </html>
