--- a/projetoceuazul-main/html/noticias.html
+++ b/projetoceuazul-main/html/noticias.html
@@ -21,62 +21,63 @@
     </header>
     <main>
           <section class="quadradoazul">
-              <article>
+            <h1 class="titulo">Notícias</h1>
+              <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="alcolatra">
                     <h1 > idoso escapa de prisão após beber refrigerante</h1>
                         <h2> o homem então alocatra afirma que ultilizou do açúcar para passar em teste de bafometro.</h2>
                             <p> na noite da semana passada, dia 25/10/2032, o senhor Valdemino Júnior admitiu que havia sido erroneamente incentado do acidente causado pelo mesmo no mês anterior, este onde Valdemiro bateu o carro causando danos a uma casa. Segundo o individuo ele havia tomado 4 litros de refrigerante, fazendo com que o açucar anulasse o o teste, ele foi então inocentado da multa.</p>
                 </article>
-                <article>
+                <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="shaves">
                     <h1 > "Gangue do shaves" <br> e pega roubando uma
                          loja de doce com armas feitas de papelão, mas sai ilesa de qualquer justiça</h1>
                           <h2> oficiais afirmam que não podem ser presos devido a sua idade. </h2>
                             <p> Apos serem pegos, a 'gangue do chaves', foi levada imediatamente a policia, e, um grupo de supostos idosos, foi revelado serem crianças então marginalizadas. Sendo o primeiro caso catalogado, a  nomeada sindrome do shaves, faz com que crianças ja nasçam com a pele totalmente envelhecida, as crianças afirmam que ao nascer foram jogadas a rua.</p>
                 </article>
-                <article>
+                <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> organização criminosa aterroriza céu azul</h1>
                         <h2></h2>
                             <p></p>
                 </article>
-                 <article>
+                 <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1>Morador de céu azul perde a mãe,<br> e a casa em competição de pedra papel e tesoura</h1>
                         <h2></h2>
                             <p></p>
                 </article>
-                  <article>
+                  <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> Criança descobre como subir em parede com inclinação de ate 93 graus, e afirma "É so achar o pixel."</h1>
                         <h2></h2>
                             <p></p>
                 </article>
-                <article>
+                <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> maior traficante de orgãos de céu azul, é encontrado com 100 instrumentos</h1>
                         <h2></h2>
                             <p></p>
                 </article>
-                <article>
+                <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> O intusiasta de jogos, vinicius decimo terceiro choca ao contruir uma maquina no jogo cubecraft. </h1>
                         <h2> o jovem de apenas 23 anos, é um fenomeno na ceunet, com seu videos carismaticos e interessantes ele vem cativando cada vez mais a garotada. </h2>
                             <p></p>
                 </article>
-                <article>
+                <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> Celebridade Taison switi, joga 3kg de dejetos em rio. </h1>
                         <h2>  </h2>
                             <p></p>
                 </article>
-                 <article>
+                 <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> Novo filme 'filme abelha' choca ao retratar romance entre abelha e humano. </h1>
                         <h2>  </h2>
                             <p></p>
                 </article>
-                <article>
+                <article class="quadradinho">
                     <img class="imagnoti" src="#" alt="sucessores">
                     <h1> Adolescente apos contrair papeira tem sua cabeça de tamanho 3 vezes maior que humano normal.  </h1>
                         <h2> Ao compartilhar suas dores, Sabrina Cavalcanti revela sua dificuldade em ate mesmo se equilibrar. </h2>
