--- a/projetoceuazul-main/html/index.html
+++ b/projetoceuazul-main/html/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <img src="../midia/img/ceuazullogo.webp" alt="logo da Prefeitura de Céu Azul" id="logo">
-            <div id="hamburger" onclick="ativarMenu()">
+            <div id="hamburger">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -26,14 +26,5 @@
     <main>
         <section class="quadradoazul"></section>
     </main>
-    <script>
-        console.log('não')
-        const hamburger = document.querySelector('#hamburger');
-        const nav = document.querySelector('#nav-list');
-
-        function ativarMenu() {
-            nav.classList.toggle('.active')
-        }
-    </script>
 </body>
 </html>
