--- a/projetoceuazul-main/html/govfeitos.html
+++ b/projetoceuazul-main/html/govfeitos.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosso Governo</title>
+    <title>Nosso Governo  - Prefeitura Municipal de Céu Azul</title>
     <link rel="stylesheet" href="../css/estilo.css">
+    <script src="../js/funcionalidades.js"></script>
 </head>
 <body>
     <header>
@@ -16,18 +17,18 @@
                 <div></div>
             </div>
             <ul id="nav-list">
-                <li><a href="#" id="nav1">Principal</a></li>
-                <li><a href="#" id="nav2">Notícias</a></li>
-                <li><a href="#" id="nav3">Grandes Figuras</a></li>
-                <li><a href="#" id="nav4">Feitos da Prefeitura</a></li>
+                <li><a href="index.html" id="nav1">Principal</a></li>
+                <li><a href="noticias.html" id="nav2">Notícias</a></li>
+                <li><a href="pimport.html" id="nav3">Grandes Figuras</a></li>
+                <li><a href="govfeitos.html" id="nav4">Feitos da Prefeitura</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="quadradoazul centro">
-        <h1 class="titulo"> Nosso governo</h1>
-            <h2 id="bord"> prosperando todos os dias nos acumulamos conquistas para nossa amada cidade, veja  as recompesas de nosso trabalho arduo!</h2>
+        <h1 class="titulo"> Nosso Governo</h1>
+            <h2 class="subtitulo"> Prosperando todos os dias, nós acumulamos conquistas para nossa amada cidade, veja as recompesas de nosso trabalho arduo!</h2>
         
             <article class="quadradinho">
                 <h3 > Asfaltamos as cidades, trouxemos paz as ruas!</h3>
