--- a/projetoceuazul-main/html/index.html
+++ b/projetoceuazul-main/html/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prefeitura Municipal de Céu Azul</title>
     <link rel="stylesheet" href="../css/estilo.css">
+    <script src="../js/funcionalidades.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <img src="../midia/img/ceuazullogo.webp" alt="logo da Prefeitura de Céu Azul" id="logo">
-            <div id="hamburger">
-                <div></div>
-                <div></div>
-                <div></div>
+            <div id="hamburger" onclick="abrirmenu()">
+                <div class="barra" id="barra01"></div>
+                <div class="barra" id="barra02"></div>
+                <div class="barra" id="barra03"></div>
             </div>
             <ul id="nav-list">
-                <li><a href="#" id="nav1">Principal</a></li>
-                <li><a href="#" id="nav2">Notícias</a></li>
-                <li><a href="#" id="nav3">Grandes Figuras</a></li>
-                <li><a href="#" id="nav4">Feitos da Prefeitura</a></li>
+                <li><a href="index.html" id="nav1">Principal</a></li>
+                <li><a href="noticias.html" id="nav2">Notícias</a></li>
+                <li><a href="pimport.html" id="nav3">Grandes Figuras</a></li>
+                <li><a href="govfeitos.html" id="nav4">Feitos da Prefeitura</a></li>
             </ul>
         </nav>
     </header>
