--- a/projetoceuazul-main/html/pimport.html
+++ b/projetoceuazul-main/html/pimport.html
@@ -3,25 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>figuras de importância</title>
+    <title>Grandes Figuras - Prefeitura Municipal de Céu Azul</title>
     <link rel="stylesheet" href="../css/estilo.css">
+    <script src="../js/funcionalidades.js"></script>
 </head>
 <body>
      <header>
         <nav>
             <img src="../midia/img/ceuazullogo.webp" alt="logo da Prefeitura de Céu Azul" id="logo">
+            <div id="hamburger" onclick="abrirmenu()">
+                <div class="barra" id="barra01"></div>
+                <div class="barra" id="barra02"></div>
+                <div class="barra" id="barra03"></div>
+            </div>
             <ul id="nav-list">
-                <li><a href="#" id="nav1">Principal</a></li>
-                <li><a href="#" id="nav2">Notícias</a></li>
-                <li><a href="#" id="nav3">Grandes Figuras</a></li>
-                <li><a href="#" id="nav4">Feitos da Prefeitura</a></li>
+                <li><a href="index.html" id="nav1">Principal</a></li>
+                <li><a href="noticias.html" id="nav2">Notícias</a></li>
+                <li><a href="pimport.html" id="nav3">Grandes Figuras</a></li>
+                <li><a href="govfeitos.html" id="nav4">Feitos da Prefeitura</a></li>
             </ul>
         </nav>
     </header>
     <main>
          
         <section class="quadradoazul">
-           <h1 class="titulo"> veja aqui as grandes figuras de céu azul</h1>
+           <h1 class="titulo"> Grandes Figuras</h1>
                 <article class="quadradinho centro">
                     <h2> Lorem ipsum dolor sit amet consectetur </h2>
                     <img src="#" alt="prefeito">
