--- a/projetoceuazul-main/html/noticias.html
+++ b/projetoceuazul-main/html/noticias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias - Prefeitura Municipal de Céu Azul</title>
+    <link rel="shortcut icon" href="../midia/img/mini-ceuazullogo230px.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilo.css">
     <script src="../js/funcionalidades.js"></script>
 </head>
