--- a/projetoceuazul-main/html/pimport.html
+++ b/projetoceuazul-main/html/pimport.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grandes Figuras - Prefeitura Municipal de Céu Azul</title>
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" href="../midia/img/mini-ceuazullogo230px.png" type="image/x-icon">
     <script src="../js/funcionalidades.js"></script>
 </head>
 <body>
